--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -366,7 +366,7 @@
     <string name="effort">Efort</string>
     <string name="updates">Actualizări</string>
     <string name="wait">Așteptați</string>
-    <string name="effort_sub">O valoare de %1$d înseamnă că se comprimă rapid, ceea ce duce la o dimensiune relativ mare a fișierului. %2$d înseamnă că trebuie să se petreacă mai mult timp comprimând, rezultând un fișier mai mic.</string>
+    <string name="effort_sub">O valoare de %1$s înseamnă că se comprimă rapid, ceea ce duce la o dimensiune relativ mare a fișierului. %2$s înseamnă că trebuie să se petreacă mai mult timp comprimând, rezultând un fișier mai mic.</string>
     <string name="allow_betas">Permiteți beta</string>
     <string name="saving_almost_complete">Salvarea este aproape finalizată. Anularea acum va necesita salvarea din nou.</string>
     <string name="allow_betas_sub">Verificarea actualizărilor va include versiunile beta ale aplicațiilor, dacă este activată</string>
@@ -742,7 +742,7 @@
     <string name="recognize_text">OCR (Recunoaștere text)</string>
     <string name="recognize_text_sub">Recunoașteți textul din imaginea dată, peste 120 de limbi acceptate</string>
     <string name="picture_has_no_text">Imaginea nu are text sau aplicația nu a găsit-o</string>
-    <string name="accuracy">Acuratețe: %1$d</string>
+    <string name="accuracy">Acuratețe: %1$s</string>
     <string name="recognition_type">Tip de recunoaștere</string>
     <string name="fast">Rapid</string>
     <string name="standard">Standard</string>
@@ -766,7 +766,7 @@
     <string name="side_by_side">Unul langa altul</string>
     <string name="toggle_tap">Comutați Atingeți</string>
     <string name="transparency">Transparenţă</string>
-    <string name="saved_to_original">Fișier suprascris cu numele %s la destinația inițială</string>
+    <string name="saved_to_original">Fișier suprascris cu numele %1$s la destinația inițială</string>
     <string name="magnifier">Lupă</string>
     <string name="magnifier_sub">Activează lupa în partea de sus a degetului în modurile de desen pentru o mai bună accesibilitate</string>
     <string name="force_exif_widget_initial_value">Forțați valoarea inițială</string>
@@ -824,7 +824,7 @@
     <string name="jpeg_type_to_jxl_sub">Efectuați transcodarea fără pierderi de la JPEG la JXL</string>
     <string name="jpeg_type_to_jxl">JPEG în JXL</string>
     <string name="document_scanner_sub">Scanați documente și creați PDF-uri sau imagini separate din acestea</string>
-    <string name="speed_sub">Controlează viteza de decodare a imaginii rezultate, aceasta ar trebui să ajute la deschiderea mai rapidă a imaginii rezultate, valoarea de %1$d înseamnă cea mai lentă decodare, în timp ce %2$d - cea mai rapidă, această setare poate crește dimensiunea imaginii de ieșire</string>
+    <string name="speed_sub">Controlează viteza de decodare a imaginii rezultate, aceasta ar trebui să ajute la deschiderea mai rapidă a imaginii rezultate, valoarea de %1$s înseamnă cea mai lentă decodare, în timp ce %2$s - cea mai rapidă, această setare poate crește dimensiunea imaginii de ieșire</string>
     <string name="svg_warning">Nu se recomandă utilizarea acestui instrument pentru urmărirea imaginilor mari fără reducerea scalei, deoarece poate provoca blocarea și creșterea timpului de procesare</string>
     <string name="create_shortcut">Creare scurtătură</string>
     <string name="create_shortcut_title">Alegeți instrumentul pentru fixare</string>
@@ -857,7 +857,7 @@
     <string name="lut_library_update_sub">Actualizați colecția de LUT-uri (numai cele noi vor fi puse la coadă), pe care le puteți aplica după descărcare</string>
     <string name="format_conversion_sub">Convertiți un lot de imagini dintr-un format în altul</string>
     <string name="format_conversion">Conversie format</string>
-    <string name="added_filter_template">Șablon de filtrare adăugat cu numele \"%1$s\" (%2$d)</string>
+    <string name="added_filter_template">Șablon de filtrare adăugat cu numele \"%1$s\" (%2$s)</string>
     <string name="no_template_filters">Nu s-au adăugat filtre pentru șabloane</string>
     <string name="opened_file_have_no_filter_template">Fișierul selectat nu are date de șablon de filtrare</string>
     <string name="template_name">Nume șablon</string>
@@ -878,7 +878,7 @@
     <string name="lossy_compression">Compresie cu pierderi</string>
     <string name="lagrange_3_sub">Un filtru de interpolare Lagrange de ordinul 3, care oferă o precizie mai bună și rezultate mai netede pentru scalarea imaginilor</string>
     <string name="image_splitting">Împărțirea imaginii</string>
-    <string name="crf_sub">O valoare de %1$d înseamnă o compresie lentă, rezultând o dimensiune relativ mică a fișierului. %2$d înseamnă o compresie mai rapidă, rezultând un fișier mare.</string>
+    <string name="crf_sub">O valoare de %1$s înseamnă o compresie lentă, rezultând o dimensiune relativ mică a fișierului. %2$s înseamnă o compresie mai rapidă, rezultând un fișier mare.</string>
     <string name="base_64_tools_sub">Decodați șirul Base64 în imagine sau codificați imaginea în format Base64</string>
     <string name="tesseract_options">Opțiuni Tesseract</string>
     <string name="image_splitting_sub">Împărțiți o singură imagine pe rânduri sau coloane</string>
@@ -951,10 +951,10 @@
     <string name="tools_arrangement">Aranjamentul instrumentelor</string>
     <string name="group_tools_by_type_sub">Grupează instrumentele pe ecranul principal în funcție de tipul lor, în loc de un aranjament personalizat al listei</string>
     <string name="webp_tools_sub">Convertiți imaginile în imagini animate WEBP sau extrageți cadre din animațiile WEBP date</string>
-    <string name="settings_group_visibility_visible">Grupul de setări \"%s\" va fi extins în mod implicit</string>
+    <string name="settings_group_visibility_visible">Grupul de setări \"%1$s\" va fi extins în mod implicit</string>
     <string name="group">Grup</string>
     <string name="image_toolbox_in_telegram_sub">Alăturați-vă chat-ului nostru unde puteți discuta orice doriți și, de asemenea, uitați-vă la canalul CI unde postez versiuni beta și anunțuri</string>
-    <string name="settings_group_visibility_hidden">Grupul de setări \"%s\" va fi colapsat în mod implicit</string>
+    <string name="settings_group_visibility_hidden">Grupul de setări \"%1$s\" va fi colapsat în mod implicit</string>
     <string name="reset_properties">Resetați proprietățile</string>
     <string name="group_tools_by_type">Instrumente de grup în funcție de tip</string>
     <string name="generate_previews">Generați previzualizări</string>
@@ -1750,7 +1750,7 @@
     <string name="processing_screenshot">Se procesează captură de ecran</string>
     <string name="screenshot_not_captured_try_again">Captura de ecran nu a fost capturată, încercați din nou</string>
     <string name="skipped_saving">Salvarea a fost omisă</string>
-    <string name="skipped_saving_multiple">%1$d fișiere au fost ignorate</string>
+    <string name="skipped_saving_multiple">%1$s fișiere au fost ignorate</string>
     <string name="allow_skip_if_larger">Permiteți săriți dacă este mai mare</string>
     <string name="allow_skip_if_larger_sub">Unele instrumente vor putea sări peste salvarea imaginilor dacă dimensiunea fișierului rezultat ar fi mai mare decât cea originală</string>
     <string name="qr_type_calendar_event">Eveniment din calendar</string>
@@ -1840,7 +1840,7 @@
     <string name="palette_format">Format paletă</string>
     <string name="export_palette_sub">Exportați paleta generată în diferite formate</string>
     <string name="add_color_palette_sub">Adaugă o nouă culoare paletei curente</string>
-    <string name="palette_name_not_supported">Formatul %s nu acceptă furnizarea numelui paletei</string>
+    <string name="palette_name_not_supported">Formatul %1$s nu acceptă furnizarea numelui paletei</string>
     <string name="wallpapers_export_not_avaialbe">Din cauza politicilor Magazinului Play, această funcție nu poate fi inclusă în versiunea actuală. Pentru a accesa această funcționalitate, vă rugăm să descărcați ImageToolbox dintr-o sursă alternativă. Puteți găsi versiunile disponibile pe GitHub mai jos.</string>
     <string name="open_github_page">Deschideți pagina Github</string>
     <string name="overwrite_files_sub_short">Fișierul original va fi înlocuit cu unul nou în loc să fie salvat în folderul selectat</string>
@@ -1867,7 +1867,7 @@
     <string name="pulse_grid_pixelization">Pixelizare grilă de impulsuri</string>
     <string name="nucleus_pixelization">Pixelizarea nucleului</string>
     <string name="radial_weave_pixelization">Pixelizare țesătură radială</string>
-    <string name="cannot_open_uri">Nu se poate deschide uri \"%s\"</string>
+    <string name="cannot_open_uri">Nu se poate deschide uri \"%1$s\"</string>
     <string name="snowfall_mode">Modul Zăpadă</string>
     <string name="enabled">Activat</string>
     <string name="border_frame">Cadru de chenar</string>
@@ -1929,10 +1929,10 @@
     <string name="merging">Fuzionarea</string>
     <string name="chunk_size">Dimensiunea bucatilor</string>
     <string name="overlap_size">Dimensiune de suprapunere</string>
-    <string name="note_chunk_info">Imaginile de peste %1$d px vor fi tăiate și procesate în bucăți, suprapunerea le combină pentru a preveni cusăturile vizibile.</string>
+    <string name="note_chunk_info">Imaginile de peste %1$s px vor fi tăiate și procesate în bucăți, suprapunerea le combină pentru a preveni cusăturile vizibile.</string>
     <string name="large_chunk_warning">Dimensiunile mari pot cauza instabilitate cu dispozitivele low-end</string>
     <string name="select_one_to_start">Selectați unul pentru a începe</string>
-    <string name="delete_model_sub">Doriți să ștergeți modelul %s? Va trebui să-l descărcați din nou</string>
+    <string name="delete_model_sub">Doriți să ștergeți modelul %1$s? Va trebui să-l descărcați din nou</string>
     <string name="confirm">Confirma</string>
     <string name="models">Modele</string>
     <string name="downloaded_models">Modele descărcate</string>
@@ -2002,9 +2002,9 @@
     <string name="horizontal_border_thickness">Grosimea marginii orizontale</string>
     <string name="vertical_border_thickness">Grosimea chenarului vertical</string>
     <plurals name="color_count">
-        <item quantity="one">%s culoare</item>
-        <item quantity="few">%s culori</item>
-        <item quantity="other">%s culori</item>
+        <item quantity="one">%1$s culoare</item>
+        <item quantity="few">%1$s culori</item>
+        <item quantity="other">%1$s culori</item>
     </plurals>
     <string name="current_model_not_chunkable">Modelul actual nu acceptă fragmentarea, imaginea va fi procesată la dimensiunile originale, acest lucru poate cauza un consum mare de memorie și probleme cu dispozitivele low-end</string>
     <string name="chunking_disabled">Îmbunătățirea în bucăți este dezactivată, imaginea va fi procesată la dimensiunile originale, acest lucru poate cauza un consum mare de memorie și probleme cu dispozitivele de ultimă generație, dar poate oferi rezultate mai bune la inferență</string>
