--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -366,7 +366,7 @@
     <string name="travels_and_places">旅遊與地點</string>
     <string name="updates">軟體更新</string>
     <string name="wait">請稍候</string>
-    <string name="effort_sub">值 %1$d 表示快速的壓縮，會產生相對較大的檔案大小；而值 %2$d 則是較慢的壓縮，可以得到較小的檔案。</string>
+    <string name="effort_sub">值 %1$s 表示快速的壓縮，會產生相對較大的檔案大小；而值 %2$s 則是較慢的壓縮，可以得到較小的檔案。</string>
     <string name="allow_betas">允許接收測試版本</string>
     <string name="alphabet_and_numbers">Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz 0123456789 !?</string>
     <string name="emotions">情感模式</string>
@@ -520,7 +520,7 @@
     <string name="transparency">透明度</string>
     <string name="allow_multiple_languages">允許多種語言</string>
     <string name="force_exif_widget_initial_value">強制初始值</string>
-    <string name="saved_to_original">在原始路徑覆蓋了名稱為 %s 的檔案</string>
+    <string name="saved_to_original">在原始路徑覆蓋了名稱為 %1$s 的檔案</string>
     <string name="magnifier">放大鏡</string>
     <string name="magnifier_sub">在繪圖模式中，在手指頂端啟用放大鏡以達到更好可及性</string>
     <string name="no_connection">沒有網路連接，請檢查並再次嘗試，以便下載訓練模型</string>
@@ -543,7 +543,7 @@
     <string name="only_clip_sub">儲存至儲存空間將不會被執行，並且圖片將僅被嘗試放入剪貼簿中</string>
     <string name="only_clip">僅剪輯</string>
     <string name="recognition_type">辨識類型</string>
-    <string name="accuracy">精確度：%1$d</string>
+    <string name="accuracy">精確度：%1$s</string>
     <string name="segmentation_mode">分割模式</string>
     <string name="restore_background_sub">刷子將會復原背景，而不是擦除</string>
     <string name="toggle_tap">切換輕觸</string>
@@ -865,7 +865,7 @@
     <string name="lossy_compression_sub">使用有損壓縮而不是無損壓縮來減少檔案大小</string>
     <string name="lanczos_bessel_sub">透過對像素值應用貝塞爾（jinc）函數來保持高品質插值的重採樣方法</string>
     <string name="compression_type">壓縮方式</string>
-    <string name="speed_sub">控制生成圖像的解碼速度，這將有助於更快地打開生成圖像，%1$d 表示最慢的解碼速度，而%2$d 表示最快的解碼速度，此設定可能會增加輸出圖像的大小</string>
+    <string name="speed_sub">控制生成圖像的解碼速度，這將有助於更快地打開生成圖像，%1$s 表示最慢的解碼速度，而%2$s 表示最快的解碼速度，此設定可能會增加輸出圖像的大小</string>
     <string name="sorting">篩選</string>
     <string name="sort_by_date">日期</string>
     <string name="sort_by_date_reversed">日期（反向）</string>
@@ -1115,7 +1115,7 @@
     <string name="select_template_preview">該圖片將被用於預覽此濾鏡範本</string>
     <string name="as_qr_code">作為 QR Code 圖片</string>
     <string name="as_file">作為檔案</string>
-    <string name="added_filter_template">新增了濾鏡範本，其名稱為「%1$s」(%2$d)</string>
+    <string name="added_filter_template">新增了濾鏡範本，其名稱為「%1$s」(%2$s)</string>
     <string name="qr_description">QR 描述</string>
     <string name="min">最小</string>
     <string name="grant_camera_permission_to_scan_qr_code">在設定中授予相機權限以掃描 QR code</string>
@@ -1276,8 +1276,8 @@
     <string name="base_64_tools">Base64 工具</string>
     <string name="base_64_tools_sub">解碼 Base64 字串為圖片，或編碼圖片為 Base64 格式</string>
     <string name="base_64">Base64</string>
-    <string name="settings_group_visibility_hidden">設定群組「%s」將被預設為摺疊</string>
-    <string name="settings_group_visibility_visible">設定群組「%s」將被預設為展開</string>
+    <string name="settings_group_visibility_hidden">設定群組「%1$s」將被預設為摺疊</string>
+    <string name="settings_group_visibility_visible">設定群組「%1$s」將被預設為展開</string>
     <string name="paste_base_64">貼上 Base64</string>
     <string name="base_64_tips">載入圖片以複製或儲存 Base64 字串。如果您已有 Base64 字串，您可以在上方貼上它以獲得圖片</string>
     <string name="import_base_64">匯入 Base64</string>
@@ -1541,7 +1541,7 @@
     <string name="lut_library_sub">下載 LUT 集合，您可以在下載之後應用它們</string>
     <string name="lut_library">LUT 函式庫</string>
     <string name="helper_grid_sub">在繪圖區域上方顯示輔助網格以協助精確繪畫操縱</string>
-    <string name="crf_sub">%1$d 代表緩慢的壓縮，因而產生相對較小的檔案。%2$d 代表較快的壓縮，因而產生較大的檔案。</string>
+    <string name="crf_sub">%1$s 代表緩慢的壓縮，因而產生相對較小的檔案。%2$s 代表較快的壓縮，因而產生較大的檔案。</string>
     <string name="lut_library_update_sub">更新 LUT 集合（只有新的項目會被加入下載隊列），您可以在下載之後應用它們</string>
     <string name="image_cutting">圖片裁剪</string>
     <string name="image_cutting_sub">通過垂直或水平線剪除部分圖片並合併其餘部分（可逆向操作）</string>
@@ -1750,7 +1750,7 @@
     <string name="processing_screenshot">处理截图</string>
     <string name="screenshot_not_captured_try_again">截图未捕获，请重试</string>
     <string name="skipped_saving">跳过保存</string>
-    <string name="skipped_saving_multiple">跳过 %1$d 文件</string>
+    <string name="skipped_saving_multiple">跳过 %1$s 文件</string>
     <string name="allow_skip_if_larger">如果较大则允许跳过</string>
     <string name="allow_skip_if_larger_sub">如果生成的文件大小大于原始文件大小，某些工具将被允许跳过保存图像</string>
     <string name="qr_type_calendar_event">日历事件</string>
@@ -1840,7 +1840,7 @@
     <string name="palette_format">调色板格式</string>
     <string name="export_palette_sub">将生成的调色板导出为不同的格式</string>
     <string name="add_color_palette_sub">向当前调色板添加新颜色</string>
-    <string name="palette_name_not_supported">%s 格式不支持提供调色板名称</string>
+    <string name="palette_name_not_supported">%1$s 格式不支持提供调色板名称</string>
     <string name="wallpapers_export_not_avaialbe">由于 Play 商店政策，此功能无法包含在当前版本中。要访问此功能，请从其他来源下载 ImageToolbox。您可以在下面的 GitHub 上找到可用的版本。</string>
     <string name="open_github_page">打开Github页面</string>
     <string name="overwrite_files_sub_short">原始文件将被新文件替换，而不是保存在所选文件夹中</string>
@@ -1867,7 +1867,7 @@
     <string name="pulse_grid_pixelization">脉冲网格像素化</string>
     <string name="nucleus_pixelization">核像素化</string>
     <string name="radial_weave_pixelization">径向编织像素化</string>
-    <string name="cannot_open_uri">无法打开 uri \"%s\"</string>
+    <string name="cannot_open_uri">无法打开 uri \"%1$s\"</string>
     <string name="snowfall_mode">降雪模式</string>
     <string name="enabled">启用</string>
     <string name="border_frame">边框</string>
@@ -1929,10 +1929,10 @@
     <string name="merging">合并</string>
     <string name="chunk_size">块大小</string>
     <string name="overlap_size">重叠尺寸</string>
-    <string name="note_chunk_info">超过 %1$d 像素的图像将被切成块进行切片和处理，重叠混合这些以防止可见的接缝。</string>
+    <string name="note_chunk_info">超过 %1$s 像素的图像将被切成块进行切片和处理，重叠混合这些以防止可见的接缝。</string>
     <string name="large_chunk_warning">大尺寸可能会导致低端设备不稳定</string>
     <string name="select_one_to_start">选择一个开始</string>
-    <string name="delete_model_sub">您想删除 %s 模型吗？您需要重新下载</string>
+    <string name="delete_model_sub">您想删除 %1$s 模型吗？您需要重新下载</string>
     <string name="confirm">确认</string>
     <string name="models">型号</string>
     <string name="downloaded_models">下载模型</string>
@@ -2002,7 +2002,7 @@
     <string name="horizontal_border_thickness">水平边框厚度</string>
     <string name="vertical_border_thickness">垂直边框厚度</string>
     <plurals name="color_count">
-        <item quantity="other">%s 颜色</item>
+        <item quantity="other">%1$s 颜色</item>
     </plurals>
     <string name="current_model_not_chunkable">当前模型不支持分块，图像将以原始尺寸处理，这可能会导致高内存消耗和低端设备问题</string>
     <string name="chunking_disabled">禁用分块，图像将以原始尺寸进行处理，这可能会导致高内存消耗和低端设备的问题，但可能会给出更好的推理结果</string>
